# agentic-bt

./: .env.example  .gitignore  AAPL_sample.csv  CLAUDE.md  README.md  demo.py  package-lock.json  pyproject.toml
.agents/: CLAUDE.md
.agents/skills/: self-evolve.md
.agents/subagents/: coder.md  researcher.md  technician.md
.claude/skills/: bb-browser
docs/: CLAUDE.md  agent-design.md  agent-platform.md  agent-protocol.md  architecture.md  automation.md  compute.md  context.md  engine.md  eval.md  harness.md  memory.md  openbb-research.md  roadmap.md  runner.md  self-evolution.md  skills.md  tech-design.md  tools.md  tracer.md  trading.md
examples/: CLAUDE.md  README.md  __init__.py  strategies.py
scripts/: CLAUDE.md  README.md  analyze_trace.py  test_yfinance_ashare_quote.py
src/agent/: CLAUDE.md  __init__.py  context_ops.py  kernel.py  messages.py  providers.py  runtime.py  session_store.py  subagents.py
src/agenticbt/: CLAUDE.md  __init__.py  agent.py  context.py  data.py  engine.py  eval.py  indicators.py  memory.py  models.py  runner.py  sandbox.py  tools.py  tracer.py
src/athenaclaw/: CLAUDE.md  __init__.py  __main__.py  harness.py
src/core/: CLAUDE.md  __init__.py  indicators.py  sandbox.py  subagent.py  tracer.py
tests/: CLAUDE.md  conftest.py  test_agent.py  test_agent_tools.py  test_automation.py  test_compute.py  test_context.py  test_context_ops.py  test_data.py  test_discord_adapter.py  test_e2e_strategies.py  test_engine.py  test_eval.py  test_finnhub_adapter.py  test_im_driver.py  test_indicators.py  test_kernel.py  test_kernel_tools.py  test_market_routing.py  test_memory.py  test_memory_compress.py  test_providers.py  test_runner.py  test_runtime_permissions.py  test_sandbox_thread.py  test_subagent.py  test_telegram_adapter.py  test_tools.py  test_tracer.py  test_tui.py  test_tushare_adapter.py  test_web_tools.py  test_yfinance_adapter.py
tests/bdd/: test_agent_tools.py  test_context_ops.py  test_finnhub_adapter.py  test_im_driver.py  test_kernel.py  test_kernel_tools.py  test_market_routing.py  test_memory_compress.py  test_sandbox_thread.py  test_skill_lifecycle.py  test_skill_reliability.py  test_skills.py  test_subagent.py  test_tui.py  test_tushare_adapter.py  test_web_tools.py  test_yfinance_adapter.py
tests/features/: agent.feature  agent_tools.feature  compute.feature  data.feature  (+19 more)
(+161 files in other folders)
